[gd_scene load_steps=6 format=3 uid="uid://qenricqeam7v"]

[ext_resource type="Script" path="res://MachineSlot.gd" id="1_n3o4u"]
[ext_resource type="Texture2D" uid="uid://bj8uhw8lxrq7i" path="res://Assets/Sprites/Container.png" id="2_31r8j"]
[ext_resource type="Texture2D" uid="uid://007xcslj4x7c" path="res://Assets/SpriteSheet/angelSheet.png" id="3_i6cjt"]
[ext_resource type="FontFile" uid="uid://xluqn1t3vaw0" path="res://Assets/Lambda-Regular.ttf" id="4_bgelg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uiv67"]
atlas = ExtResource("3_i6cjt")
region = Rect2(0, 0, 32, 32)

[node name="MachineSlot" type="Panel"]
custom_minimum_size = Vector2(115, 115)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1035.0
offset_bottom = -527.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3o4u")

[node name="Border" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3, 3)
texture = ExtResource("2_31r8j")

[node name="TextureRect" type="TextureRect" parent="Border"]
visible = false
layout_mode = 0
offset_left = 3.33333
offset_top = 4.0
offset_right = 43.3333
offset_bottom = 44.0
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_uiv67")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 71.0
offset_top = 67.0
offset_right = 109.0
offset_bottom = 114.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bgelg")
theme_override_font_sizes/font_size = 40
text = "99"

[connection signal="dropped" from="." to="." method="_on_dropped"]
[connection signal="droppedOnExistingItem" from="." to="." method="_on_dropped_on_existing_item"]
[connection signal="gui_input" from="Border" to="." method="_on_border_gui_input"]
[connection signal="mouse_entered" from="Border" to="." method="_on_border_mouse_entered"]
